Fix stack vertical spacing and padding for mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -156,42 +156,6 @@ input, select, textarea {
 		padding: 0.5em 0 0.5em 2em;
 	}
 
-	/* code {
-		background: #555;
-		border-radius: 5px;
-		color: #fff;
-		font-family: "Source Code Pro", monospace;
-		font-size: 0.9em;
-		margin: 0 0.25em;
-		padding: 0.25em 0.65em;
-	}
-
-	pre {
-		font-family: "Source Code Pro", monospace;
-		font-size: 0.9em;
-		margin: 0 0 2.25em 0;
-	}
-
-		pre code {
-			-webkit-overflow-scrolling: touch;
-			display: block;
-			line-height: 1.5em;
-			overflow-x: auto;
-			padding: 1em 1.5em;
-		}
-
-	.align-left {
-		text-align: left;
-	}
-
-	.align-center {
-		text-align: center;
-	}
-
-	.align-right {
-		text-align: right;
-	} */
-
 /* Row */
 
 	.row {
@@ -2300,7 +2264,8 @@ p.actions.stack {
 		@media screen and (max-width: 480px) {
 
 			ul.actions.stack li {
-				margin: 0;
+				padding: 0;
+				margin: 0 0 0.2em 0;
 			}
 
 			ul.actions:not(.fixed) {
@@ -2321,7 +2286,7 @@ p.actions.stack {
 					-webkit-flex-shrink: 1;
 					-ms-flex-shrink: 1;
 					flex-shrink: 1;
-					padding: 1.125em 0 0 0;
+					padding: 0 0 0 0;
 					text-align: center;
 					width: 100%;
 				}
